Fixing up styling and added more carpets to nav following adel specificaton i.e. abingdon luxury and invictus

--- a/Carpets/nav/cormar.html
+++ b/Carpets/nav/cormar.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="carpet.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <title>Cormar</title>
   </head>
   <body>
@@ -91,16 +94,17 @@
     </header>
 
     <section class="hero">
-      <img src="../../Photos/Mac/Carpet2-mac.png" alt="" />
+      <img src="../../Photos/Cormar/riva.png" alt="" />
       <div class="title-desc">
-        <h1>Cormar</h1>
+        <h1>Cormar - Riva</h1>
         <hr />
         <p>
-          Cormar Carpets is a leading British carpet manufacturer known for
-          producing high-quality, stylish, and durable carpets. With a wide
-          range of wool and easy-care synthetic collections, Cormar combines
-          comfort with performance, making it a trusted choice for homes across
-          the UK.
+          The Cormar Riva range is a contemporary carpet collection designed for
+          both style and practicality. Made from durable, easy-care fibres, Riva
+          carpets offer a soft and comfortable feel underfoot while being
+          resistant to everyday wear and stains. With a wide selection of
+          colours and textures, the Riva line brings modern elegance and
+          long-lasting performance to homes across the UK.
         </p>
       </div>
     </section>
