--- a/Carpets/nav/alexandria.html
+++ b/Carpets/nav/alexandria.html
@@ -17,73 +17,80 @@
             <span class="bar"></span>
             <span class="bar"></span>
           </div>
-
+    
           <!-- Desktop Menu -->
           <ul class="navbar__menu">
             <li class="navbar__item">
-              <a href="Contact/contact-us.html" class="navbar__links"
-                >Book Appointment</a
-              >
+              <a href="Contact/contact-us.html" class="navbar__links">
+                Book Appointment
+              </a>
             </li>
             <li class="navbar__item dropdown">
-              <a href="#collection" class="navbar__links">Collection</a>
+              <a href="#" class="navbar__links">Collection</a>
               <ul class="dropdown__menu">
                 <li class="dropdown">
-                  <a href="#carpet" class="dropdown__link">
+                  <a href="#" class="dropdown__link">
                     Carpet <span class="arrow">></span>
                   </a>
                   <ul class="dropdown__submenu">
                     <li>
-                      <a href="cormar.html" class="dropdown__link">Cormar</a>
+                      <a href="Carpets/nav/cormar.html" class="dropdown__link">Cormar</a>
                     </li>
                     <li>
-                      <a href="sisal.html" class="dropdown__link">Sisal</a>
+                      <a href="Carpets/nav/sisal.html" class="dropdown__link">Sisal</a>
                     </li>
                     <li>
-                      <a href="#luxury-carpet" class="dropdown__link"
-                        >Luxury Carpet</a
-                      >
+                      <a href="Carpets/nav/alexandria.html" class="dropdown__link">Luxury Carpet</a>
                     </li>
                   </ul>
                 </li>
-                <li><a href="#laminate" class="dropdown__link">Laminate</a></li>
-                <li><a href="#vinyl" class="dropdown__link">Vinyl</a></li>
-                <li><a href="#lvt" class="dropdown__link">LVT</a></li>
-                <li><a href="#wood" class="dropdown__link">Wood</a></li>
-                <li><a href="#sisal" class="dropdown__link">Sisal</a></li>
+                <li>
+                  <a href="Carpets/nav/wood.html" class="dropdown__link">Laminate</a>
+                </li>
+                <li>
+                  <a href="Carpets/nav/wood.html" class="dropdown__link">Vinyl</a>
+                </li>
+                <li>
+                  <a href="Carpets/nav/wood.html" class="dropdown__link">LVT</a>
+                </li>
+                <li>
+                  <a href="Carpets/nav/wood.html" class="dropdown__link">Wood</a>
+                </li>
+                <li>
+                  <a href="Carpets/nav/sisal.html" class="dropdown__link">Sisal</a>
+                </li>
               </ul>
             </li>
             <img
-              src="../../Photos/Logo.png"
+              src="Photos/Logo.png"
               class="sc-logo"
               alt="websitelogo" />
             <li class="navbar__item">
-              <a href="#retroV" class="navbar__links">Gallery</a>
+              <a href="Carpets/nav/gallery.html" class="navbar__links">Gallery</a>
             </li>
-
             <li class="navbar__item">
-              <a href="#ourFilms" class="navbar__links">About Us</a>
+              <a href="Carpets/nav/aboutus.html" class="navbar__links">About Us</a>
             </li>
           </ul>
         </div>
       </nav>
-
+    
       <!-- Offscreen Menu for mobile -->
       <div class="off-screen">
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="Contact/contact-us.html" class="navbar__links"
-              >Book Appointment</a
-            >
+            <a href="Contact/contact-us.html" class="navbar__links">
+              Book Appointment
+            </a>
           </li>
           <li class="navbar__item">
-            <a href="#retroV" class="navbar__links">Gallery</a>
+            <a href="Carpets/nav/gallery.html" class="navbar__links">Gallery</a>
           </li>
           <li class="navbar__item">
-            <a href="#ourGames" class="navbar__links">Collection</a>
+            <a href="Carpets/nav/cormar.html" class="navbar__links">Collection</a>
           </li>
           <li class="navbar__item">
-            <a href="#ourFilms" class="navbar__links">About Us</a>
+            <a href="Carpets/nav/aboutus.html" class="navbar__links">About Us</a>
           </li>
         </ul>
       </div>
