--- a/Carpets/nav/wood.html
+++ b/Carpets/nav/wood.html
@@ -34,9 +34,7 @@
                   </a>
                   <ul class="dropdown__submenu">
                     <li>
-                      <a href="Carpets/cormar.html" class="dropdown__link"
-                        >Cormar</a
-                      >
+                      <a href=" cormar.html" class="dropdown__link">Cormar</a>
                     </li>
                     <li>
                       <a href="sisal.html" class="dropdown__link">Sisal</a>
@@ -59,7 +57,7 @@
               class="sc-logo"
               alt="websitelogo" />
             <li class="navbar__item">
-              <a href="#retroV" class="navbar__links">Gallery</a>
+              <a href="gallery.html" class="navbar__links">Gallery</a>
             </li>
 
             <li class="navbar__item">
