added sisal lvt viynl and complleted nav bar

--- a/Carpets/nav/hughmackay.html
+++ b/Carpets/nav/hughmackay.html
@@ -96,13 +96,11 @@
         <h1>Hugh Mackay</h1>
         <hr />
         <p>
-          Amtico is a renowned British brand specializing in premium wood-effect
-          vinyl flooring. Known for its exceptional durability, realistic
-          finishes, and innovative design, Amtico flooring offers a stylish and
-          practical solution for modern homes and commercial spaces alike. With
-          a wide range of wood textures and tones, Amtico brings the natural
-          beauty of wood with the added benefits of easy maintenance and
-          long-lasting performance.
+          Hugh Mackay is a leading British carpet manufacturer, known for
+          producing high-quality, stylish, and durable carpets. Renowned for
+          their attention to detail and wide variety of designs, Hugh Mackay
+          carpets combine comfort with long-lasting performance, making them an
+          ideal choice for both family homes and modern interiors across the UK.
         </p>
       </div>
     </section>
