--- a/Carpets/nav/invictus_magnificus.html
+++ b/Carpets/nav/invictus_magnificus.html
@@ -97,12 +97,12 @@
     </header>
 
     <section class="hero">
-      <img src="../../Photos/Mac/Carpet2-mac.png" alt="Sisal Carpets" />
+      <img src="../../Photos/Invictus/MGFITA_98_LIVING.png" alt="Sisal Carpets" />
       <div class="title-desc">
-        <h1>Alexandria Carpets</h1>
+        <h1>invictus - Magnificus</h1>
         <hr />
         <p>
-          Alexandria Carpets are renowned for their luxurious textures, timeless patterns, and high-quality craftsmanship. Blending classic elegance with modern durability, these carpets are designed to enhance any space—offering comfort, sophistication, and lasting performance for both traditional and contemporary interiors.
+          The Invictus Magnificus collection offers a luxurious and durable range of carpets, designed to combine style with long-lasting performance. With its soft yet hard-wearing fibres and a selection of contemporary colours and textures, Magnificus carpets provide both comfort underfoot and practical resilience, making them ideal for modern family homes.
         </p>
     </section>
 
