--- a/Carpets/nav/sisal.html
+++ b/Carpets/nav/sisal.html
@@ -90,7 +90,7 @@
     </header>
 
     <section class="hero">
-      <img src="../../Photos/Mac/Carpet2-mac.png" alt="Sisal Carpets" />
+      <img src="../../Photos/sisal/Seagrass.png" alt="Sisal Carpets" />
       <div class="title-desc">
         <h1>Sisal & Seagrass</h1>
         <hr />
