--- a/Carpets/nav/victoria_universal.html
+++ b/Carpets/nav/victoria_universal.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="carpet.css" />
-    <title>Alexandria</title>
+    <title>Sisal & Seagrass</title>
   </head>
   <body>
     <header>
@@ -97,12 +97,12 @@
     </header>
 
     <section class="hero">
-      <img src="../../Photos/sisal/alexandria.png" alt="Sisal Carpets" />
+      <img src="../../Photos/Victoria/55-parquet.png" alt="Sisal Carpets" />
       <div class="title-desc">
-        <h1>Alexandria - Sisal</h1>
+        <h1>Victoria - Universal</h1>
         <hr />
         <p>
-          Alexandria Carpets are renowned for their luxurious textures, timeless patterns, and high-quality craftsmanship. Blending classic elegance with modern durability, these carpets are designed to enhance any space—offering comfort, sophistication, and lasting performance for both traditional and contemporary interiors.
+          The Victoria Carpets Universal collection is designed to combine timeless style with everyday practicality. Offering a versatile range of durable designs and natural finishes, this line provides both comfort and resilience, making it a perfect choice for modern homes that demand long-lasting performance without compromising on elegance.
         </p>
     </section>
 
@@ -184,6 +184,6 @@
         </p>
       </div>
     </footer>
-    <script src="../js/alexandria.js"></script>
+    <script src="../js/victoria_universal.js"></script>
   </body>
 </html>
