--- a/Carpets/nav/xylo.html
+++ b/Carpets/nav/xylo.html
@@ -90,7 +90,9 @@
     </header>
 
     <section class="hero">
-      <img src="../../Photos/Mac/Carpet2-mac.png" alt="Sisal Carpets" />
+      <img
+        src="../../Photos/laminate/xylo_room_lam_3.png"
+        alt="Sisal Carpets" />
       <div class="title-desc">
         <h1>Xylo Laminate</h1>
         <hr />
