--- a/Carpets/nav/hamp_wool.html
+++ b/Carpets/nav/hamp_wool.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="carpet.css" />
-    <title>Alexandria</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <title>Primo</title>
   </head>
   <body>
     <header>
@@ -17,99 +20,100 @@
             <span class="bar"></span>
             <span class="bar"></span>
           </div>
-    
+
           <!-- Desktop Menu -->
           <ul class="navbar__menu">
             <li class="navbar__item">
-              <a href="Contact/contact-us.html" class="navbar__links">
-                Book Appointment
-              </a>
+              <a href="../../Contact/contact-us.html" class="navbar__links"
+                >Book Appointment</a
+              >
             </li>
             <li class="navbar__item dropdown">
-              <a href="#" class="navbar__links">Collection</a>
+              <a href="#collection" class="navbar__links">Collection</a>
               <ul class="dropdown__menu">
                 <li class="dropdown">
-                  <a href="#" class="dropdown__link">
+                  <a href="#carpet" class="dropdown__link">
                     Carpet <span class="arrow">></span>
                   </a>
                   <ul class="dropdown__submenu">
                     <li>
-                      <a href="Carpets/nav/cormar.html" class="dropdown__link">Cormar</a>
+                      <a href="Carpets/cormar.html" class="dropdown__link"
+                        >Cormar</a
+                      >
                     </li>
                     <li>
-                      <a href="Carpets/nav/sisal.html" class="dropdown__link">Sisal</a>
+                      <a href="sisal.html" class="dropdown__link">Sisal</a>
                     </li>
                     <li>
-                      <a href="Carpets/nav/alexandria.html" class="dropdown__link">Luxury Carpet</a>
+                      <a href="#luxury-carpet" class="dropdown__link"
+                        >Luxury Carpet</a
+                      >
                     </li>
                   </ul>
                 </li>
-                <li>
-                  <a href="Carpets/nav/wood.html" class="dropdown__link">Laminate</a>
-                </li>
-                <li>
-                  <a href="Carpets/nav/wood.html" class="dropdown__link">Vinyl</a>
-                </li>
-                <li>
-                  <a href="Carpets/nav/wood.html" class="dropdown__link">LVT</a>
-                </li>
-                <li>
-                  <a href="Carpets/nav/wood.html" class="dropdown__link">Wood</a>
-                </li>
-                <li>
-                  <a href="Carpets/nav/sisal.html" class="dropdown__link">Sisal</a>
-                </li>
+                <li><a href="#laminate" class="dropdown__link">Laminate</a></li>
+                <li><a href="#vinyl" class="dropdown__link">Vinyl</a></li>
+                <li><a href="#lvt" class="dropdown__link">Lvt</a></li>
+                <li><a href="#wood" class="dropdown__link">Wood</a></li>
               </ul>
             </li>
             <img
-              src="Photos/Logo.png"
+              src="../../Photos/Logo.png"
               class="sc-logo"
               alt="websitelogo" />
             <li class="navbar__item">
-              <a href="Carpets/nav/gallery.html" class="navbar__links">Gallery</a>
+              <a href="#retroV" class="navbar__links">Gallery</a>
             </li>
+
             <li class="navbar__item">
-              <a href="Carpets/nav/aboutus.html" class="navbar__links">About Us</a>
+              <a href="#ourFilms" class="navbar__links">About Us</a>
             </li>
           </ul>
         </div>
       </nav>
-    
+
       <!-- Offscreen Menu for mobile -->
       <div class="off-screen">
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="Contact/contact-us.html" class="navbar__links">
-              Book Appointment
-            </a>
+            <a href="../../Contact/contact-us.html" class="navbar__links"
+              >Book Appointment</a
+            >
           </li>
           <li class="navbar__item">
-            <a href="Carpets/nav/gallery.html" class="navbar__links">Gallery</a>
+            <a href="#retroV" class="navbar__links">Gallery</a>
           </li>
           <li class="navbar__item">
-            <a href="Carpets/nav/cormar.html" class="navbar__links">Collection</a>
+            <a href="#ourGames" class="navbar__links">Collection</a>
           </li>
           <li class="navbar__item">
-            <a href="Carpets/nav/aboutus.html" class="navbar__links">About Us</a>
+            <a href="#ourFilms" class="navbar__links">About Us</a>
           </li>
         </ul>
       </div>
     </header>
 
     <section class="hero">
-      <img src="../../Photos/sisal/alexandria.png" alt="Sisal Carpets" />
+      <img
+        src="../../Photos/Cormar/cormar-hamstead-fossil-landscape-45.png"
+        alt="" />
       <div class="title-desc">
-        <h1>Alexandria - Sisal</h1>
+        <h1>Cormar - Hampstead</h1>
         <hr />
         <p>
-          Alexandria Carpets are renowned for their luxurious textures, timeless patterns, and high-quality craftsmanship. Blending classic elegance with modern durability, these carpets are designed to enhance any space—offering comfort, sophistication, and lasting performance for both traditional and contemporary interiors.
+          The Cormar Hampstead Wool range is a classic collection crafted from
+          high-quality wool, offering natural comfort and long-lasting
+          durability. Soft yet resilient, Hampstead Wool carpets provide
+          excellent warmth and insulation while retaining their elegant
+          appearance in busy homes. Available in a palette of timeless shades,
+          the Hampstead Wool line combines traditional craftsmanship with
+          everyday practicality, making it a perfect choice for both modern and
+          classic interiors.
         </p>
+      </div>
     </section>
-
     <section id="carpet-gallery">
-      <h2 style="text-align: center; margin: 2rem 0">
-        Our Alexandria Collection
-      </h2>
+      <h2 style="text-align: center; margin: 2rem 0">Our Cormar Collection</h2>
       <div class="grid" id="carpetGrid"></div>
     </section>
     <div id="pagination" class="pagination-controls">
@@ -118,14 +122,16 @@
       <button id="nextPage" aria-label="Next page">▶</button>
     </div>
     <!-- Modal container (hidden by default) -->
+    <!-- Modal container (hidden by default) -->
     <div id="carpetModal" class="modal">
       <div class="modal-content">
         <span id="modalClose" class="close">&times;</span>
-        <img id="modalImage" src="" alt="Carpet Preview" />
+        <img id="modalImage" src="" alt="" />
         <h3 id="modalName"></h3>
         <div id="modalInfo"></div>
       </div>
     </div>
+
     <!-- ⬇️ Moved OUTSIDE of the modal ⬇️ -->
     <section class="quick-links">
       <div class="quick-top-wrapper">
@@ -184,6 +190,6 @@
         </p>
       </div>
     </footer>
-    <script src="../js/alexandria.js"></script>
   </body>
+  <script src="../js/hamp_wool.js"></script>
 </html>
