--- a/Carpets/nav/invictus_orion.html
+++ b/Carpets/nav/invictus_orion.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="carpet.css" />
-    <title>Alexandria</title>
+    <title>Sisal & Seagrass</title>
   </head>
   <body>
     <header>
@@ -97,12 +97,12 @@
     </header>
 
     <section class="hero">
-      <img src="../../Photos/sisal/alexandria.png" alt="Sisal Carpets" />
+      <img src="../../Photos/Invictus/ORINTA_75_BED.png" alt="Sisal Carpets" />
       <div class="title-desc">
-        <h1>Alexandria - Sisal</h1>
+        <h1>invictus - Orion</h1>
         <hr />
         <p>
-          Alexandria Carpets are renowned for their luxurious textures, timeless patterns, and high-quality craftsmanship. Blending classic elegance with modern durability, these carpets are designed to enhance any space—offering comfort, sophistication, and lasting performance for both traditional and contemporary interiors.
+          The Invictus Orion collection is a versatile carpet range combining modern style with long-lasting durability. Crafted from hard-wearing fibres and available in a variety of contemporary colours and textures, Orion carpets provide comfort underfoot while standing up to everyday family life, making them ideal for stylish, practical homes.
         </p>
     </section>
 
@@ -184,6 +184,6 @@
         </p>
       </div>
     </footer>
-    <script src="../js/alexandria.js"></script>
+    <script src="../js/invictus_orion.js"></script>
   </body>
 </html>
