--- a/Carpets/nav/victoria_royal.html
+++ b/Carpets/nav/victoria_royal.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="carpet.css" />
-    <title>Alexandria</title>
+    <title>Sisal & Seagrass</title>
   </head>
   <body>
     <header>
@@ -97,12 +97,12 @@
     </header>
 
     <section class="hero">
-      <img src="../../Photos/sisal/alexandria.png" alt="Sisal Carpets" />
+      <img src="../../Photos/Victoria/royal-velvet-1.png" alt="Sisal Carpets" />
       <div class="title-desc">
-        <h1>Alexandria - Sisal</h1>
+        <h1>Victoria - Royal Velvet</h1>
         <hr />
         <p>
-          Alexandria Carpets are renowned for their luxurious textures, timeless patterns, and high-quality craftsmanship. Blending classic elegance with modern durability, these carpets are designed to enhance any space—offering comfort, sophistication, and lasting performance for both traditional and contemporary interiors.
+          The Victoria Carpets Royal Velvet collection is a luxurious range designed to bring elegance and comfort to any home. Featuring a beautifully soft texture and rich, deep pile, Royal Velvet carpets combine timeless style with durability, offering both sophistication and practicality for modern living.
         </p>
     </section>
 
@@ -184,6 +184,6 @@
         </p>
       </div>
     </footer>
-    <script src="../js/alexandria.js"></script>
+    <script src="../js/victoria_royal.js"></script>
   </body>
 </html>
