Updated all nav folder nav bars to connect to one another now need to update the off screen and images on nav bar further more changed all title tages

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       </div>
 
       <div class="mid-wrapper">
-        <img src="Photos/midpic.png" class="mid-left" />
+        
         <div class="mid-mid">
           <h3>
             At Supreme Carpets, our family-run team is dedicated to guiding you
@@ -281,6 +281,8 @@
             personal touch, making sure your space truly reflects your vision.
           </h3>
         </div>
+        <div class="mid-right-group">
+        <img src="Photos/midpic.png" class="mid-left" />
         <video
           class="mid-right video-hover"
           muted
@@ -290,12 +292,13 @@
           Your browser does not support the video tag.
         </video>
       </div>
+      </div>
       <div class="bottom-wrapper">
         <div class="bottom-left-cell">
-          <img src="Photos/Mac/Carpet1-mac.png" class="left-cell" />
+          <img src="Photos/Adel/7FC278D2-C776-40E8-8ECD-BD663B045FC5.png" class="left-cell" />
         </div>
         <div class="bottom-right-cell">
-          <img src="Photos/Mac/Carpet2-mac.png" class="right-cell" />
+          <img src="Photos/Adel/5fdf2c82-0414-4080-a7bf-d6b5e7a18360.png" class="right-cell" />
         </div>
       </div>
     </section>
