--- a/Carpets/nav/abingdon_caress.html
+++ b/Carpets/nav/abingdon_caress.html
@@ -181,7 +181,7 @@
                 </li>
               </ul>
             </li>
-            <img src="Photos/Logo.png" class="sc-logo" alt="websitelogo" />
+            <img src="../../Photos/Logo.png" class="sc-logo" alt="websitelogo" />
             <li class="navbar__item">
               <a href="gallery.html" class="navbar__links"
                 >Gallery</a
@@ -198,24 +198,138 @@
       </nav>
 
       <!-- Offscreen Menu for mobile -->
-      <div class="off-screen">
-        <ul class="navbar__menu">
-          <li class="navbar__item">
-            <a href="Contact/contact-us.html" class="navbar__links"
-              >Book Appointment</a
-            >
-          </li>
-          <li class="navbar__item">
-            <a href="#retroV" class="navbar__links">Gallery</a>
-          </li>
-          <li class="navbar__item">
-            <a href="#ourGames" class="navbar__links">Collection</a>
-          </li>
-          <li class="navbar__item">
-            <a href="#ourFilms" class="navbar__links">About Us</a>
-          </li>
-        </ul>
-      </div>
+   <!-- Offscreen Menu for mobile -->
+   <div class="off-screen">
+   <ul class="mmenu">
+    <!-- Book Appointment -->
+    <li class="menu-item"><a href="../../Contact/contact-us.html" class="btn">Book Appointment</a></li>
+  
+    <!-- Collection -->
+    <li class="menu-item">
+      <span class="btn toggle-btn">Collection</span>
+      <ul class="menu-item__sub">
+        <!-- Carpet -->
+        <li class="menu-item">
+          <span class="btn toggle-btn">Carpet</span>
+          <ul class="menu-item__sub">
+            <!-- Cormar -->
+            <li class="menu-item">
+              <span class="btn toggle-btn">Cormar</span>
+              <ul class="menu-item__sub">
+                <li><a href="primo.html" class="dropdown__link">Primo</a></li>
+                <li><a href="zenith.html" class="dropdown__link">Zenith</a></li>
+                <li><a href="sensation.html" class="dropdown__link">Sensation</a></li>
+                <li><a href="cormar.html" class="dropdown__link">Riva</a></li>
+              </ul>
+            </li>
+  
+            <!-- Abingdon -->
+            <li class="menu-item">
+              <span class="btn toggle-btn">Abingdon</span>
+              <ul class="menu-item__sub">
+                <li><a href="abingdon_caress.html" class="dropdown__link">Caress</a></li>
+                <li><a href="abingdon_berber.html" class="dropdown__link">Berber</a></li>
+                <li><a href="abingdon_lovestory.html" class="dropdown__link">Love Story</a></li>
+              </ul>
+            </li>
+  
+            <!-- Invictus -->
+            <li class="menu-item">
+              <span class="btn toggle-btn">Invictus</span>
+              <ul class="menu-item__sub">
+                <li><a href="invictus_magnificus.html" class="dropdown__link">Magnificus</a></li>
+                <li><a href="invictus_sirius.html" class="dropdown__link">Sirius</a></li>
+                <li><a href="invictus_orion.html" class="dropdown__link">Orion</a></li>
+              </ul>
+            </li>
+  
+            <!-- Luxury -->
+            <li class="menu-item">
+              <span class="btn toggle-btn">Luxury</span>
+              <ul class="menu-item__sub">
+                <li><a href="elements.html" class="dropdown__link">Elements</a></li>
+                <li><a href="hughmackay.html" class="dropdown__link">Hugh Mackay</a></li>
+              </ul>
+            </li>
+  
+            <!-- Victoria -->
+            <li class="menu-item">
+              <span class="btn toggle-btn">Victoria</span>
+              <ul class="menu-item__sub">
+                <li><a href="victoria_royal.html" class="dropdown__link">Royal Velvet</a></li>
+                <li><a href="victoria_ultimate.html" class="dropdown__link">Ultimate Expressions</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+  
+        <!-- Laminate -->
+        <li class="menu-item">
+          <span class="btn toggle-btn">Laminate</span>
+          <ul class="menu-item__sub">
+            <li><a href="xylo.html" class="dropdown__link">Xylo</a></li>
+            <li><a href="lifestyle.html" class="dropdown__link">Lifestyle</a></li>
+            <li><a href="herringbone.html" class="dropdown__link">Herringbone</a></li>
+          </ul>
+        </li>
+  
+        <!-- Vinyl -->
+        <li class="menu-item">
+          <span class="btn toggle-btn">Vinyl</span>
+          <ul class="menu-item__sub">
+            <li><a href="megatex.html" class="dropdown__link">Rio Megatex</a></li>
+          </ul>
+        </li>
+  
+        <!-- LVT -->
+        <li class="menu-item">
+          <span class="btn toggle-btn">LVT</span>
+          <ul class="menu-item__sub">
+            <li><a href="victoria_universal.html" class="dropdown__link">Universal 55 Plank</a></li>
+            <li><a href="therdex.html" class="dropdown__link">Therdex</a></li>
+          </ul>
+        </li>
+  
+        <!-- Sisal -->
+        <li class="menu-item">
+          <span class="btn toggle-btn">Sisal</span>
+          <ul class="menu-item__sub">
+            <li><a href="sisal.html" class="dropdown__link">Sisal</a></li>
+            <li><a href="alexandria.html" class="dropdown__link">Alexandria</a></li>
+          </ul>
+        </li>
+  
+        <!-- Wood -->
+        <li class="menu-item">
+          <span class="btn toggle-btn">Wood</span>
+          <ul class="menu-item__sub">
+            <li><a href="amtico.html" class="dropdown__link">Amtico</a></li>
+            <li><a href="xylo_engine.html" class="dropdown__link">Xylo Engineered</a></li>
+            <li><a href="victoria_engine.html" class="dropdown__link">Victoria Engineered</a></li>
+          </ul>
+        </li>
+  
+        <!-- Wool -->
+        <li class="menu-item">
+          <span class="btn toggle-btn">Wool</span>
+          <ul class="menu-item__sub">
+            <li><a href="looped_c.html" class="dropdown__link">Looped</a></li>
+            <li><a href="abingdon_berber.html" class="dropdown__link">Berber</a></li>
+            <li><a href="hamp_wool.html" class="dropdown__link">Twist 80/20</a></li>
+            <li><a href="twist5050.html" class="dropdown__link">Twist 50/50</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  
+    <!-- Logo -->
+   
+  
+    <!-- Other top-level -->
+    <li class="menu-item"><a href="gallery.html" class="btn">Gallery</a></li>
+    <li class="menu-item"><a href="aboutus.html" class="btn">About Us</a></li>
+  </ul>
+  </div>
     </header>
 
     <section class="hero">
@@ -313,4 +427,6 @@
     </footer>
   </body>
   <script src="../js/abingdon_caress.js"></script>
+  <script src="../../script.js"></script>
+  <script src="../../menu.js"></script>
 </html>
