--- a/Carpets/nav/gallery.html
+++ b/Carpets/nav/gallery.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/gallery.css" />
+    <link rel="icon" href="../../logofavi.ico" type="image/x-icon" sizes="32x32" />
+
+    
     <title>Gallery</title>
   </head>
   <body>
@@ -177,7 +180,7 @@
               </li>
             </ul>
           </li>
-          <img src="../../Photos/Logo.png" class="sc-logo" alt="websitelogo" />
+          <a href="../../index.html"><img src="../../Photos/Logo.png" class="sc-logo" alt="websitelogo" /></a>
           <li class="navbar__item">
             <a href="gallery.html" class="navbar__links"
               >Gallery</a
@@ -322,6 +325,8 @@
  
 
   <!-- Other top-level -->
+  <li class="menu-item"><a href="../../index.html" class="btn">Home</a></li>
+
   <li class="menu-item"><a href="gallery.html" class="btn">Gallery</a></li>
   <li class="menu-item"><a href="aboutus.html" class="btn">About Us</a></li>
 </ul>
@@ -332,14 +337,14 @@
       <h1>Showroom Gallery</h1>
       <div class="image-container">
         <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
+        <div class="image"><img src="../../Photos/Adel/7FC278D2-C776-40E8-8ECD-BD663B045FC5.png" alt="" /></div>
+        <div class="image"><img src="../../Photos/Adel/5fdf2c82-0414-4080-a7bf-d6b5e7a18360.png" alt="" /></div>
+        <div class="image"><img src="../../Photos/Adel/IMG_5285.png" alt="" /></div>
+        <div class="image"><img src="../../Photos/Adel/IMG_6223.png" alt="" /></div>
+        <div class="image"><img src="../../Photos/Adel/IMG_6291.png" alt="" /></div>
+        <div class="image"><img src="../../Photos/Adel/IMG_7452.png" alt="" /></div>
         <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
-        <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
-        <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
-        <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
-        <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
-        <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
-        <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
-        <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
+        <div class="image"><img src="../../Photos/Adel/IMG_9662.png" alt="" /></div>
         <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
         <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
         <div class="image"><img src="../../Photos/midpic.png" alt="" /></div>
@@ -350,6 +355,29 @@
         <img src="../../Photos/midpic.png" alt="" />
       </div>
     </div>
+    <footer class="footer">
+      <div class="footer-content">
+        <p class="footer-top">
+          © 2025 Supreme W2 Carpets. All Rights Reserved.
+          <a href="../../privacy.html">Privacy Policy</a>
+        </p>
+
+        <p class="footer-info">
+          Registered Office: Suite G04, 1 Quality Court, Chancery Lane, London,
+          WC2A 1HR<br />
+          Registered in England and Wales | Company No: 15347370
+        </p>
+
+        <p class="footer-link">
+          <a
+            href="https://find-and-update.company-information.service.gov.uk/company/09374347"
+            target="_blank"
+            rel="noopener noreferrer">
+            View on Companies House
+          </a>
+        </p>
+      </div>
+    </footer>
     <script src="../js/gallery.js"></script>
     <script src="../../script.js"></script>
   <script src="../../menu.js"></script>
