--- a/Carpets/nav/invictus_sirius.html
+++ b/Carpets/nav/invictus_sirius.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="carpet.css" />
+    <link rel="icon" href="../../logofavi.ico" type="image/x-icon" sizes="32x32" />
+
     <title>Invictus Sirius</title>
   </head>
   <body>
@@ -177,7 +179,7 @@
               </li>
             </ul>
           </li>
-          <img src="../../Photos/Logo.png" class="sc-logo" alt="websitelogo" />
+          <a href="../../index.html"><img src="../../Photos/Logo.png" class="sc-logo" alt="websitelogo" /></a>
           <li class="navbar__item">
             <a href="gallery.html" class="navbar__links"
               >Gallery</a
@@ -322,6 +324,8 @@
  
 
   <!-- Other top-level -->
+  <li class="menu-item"><a href="../../index.html" class="btn">Home</a></li>
+
   <li class="menu-item"><a href="gallery.html" class="btn">Gallery</a></li>
   <li class="menu-item"><a href="aboutus.html" class="btn">About Us</a></li>
 </ul>
@@ -396,8 +400,8 @@
     <footer class="footer">
       <div class="footer-content">
         <p class="footer-top">
-          © 2025 Plumbers Pro Limited. All Rights Reserved.
-          <a href="/privacy-policy">Privacy Policy</a>
+          © 2025 Supreme W2 Carpets. All Rights Reserved.
+          <a href="../../privacy.html">Privacy Policy</a>
         </p>
 
         <p class="footer-info">
@@ -408,7 +412,7 @@
 
         <p class="footer-link">
           <a
-            href="https://find-and-update.company-information.service.gov.uk/company/15347370"
+            href="https://find-and-update.company-information.service.gov.uk/company/09374347"
             target="_blank"
             rel="noopener noreferrer">
             View on Companies House
