--- a/Carpets/nav/aboutus.html
+++ b/Carpets/nav/aboutus.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/about.css" />
+    <link rel="icon" href="../../logofavi.ico" type="image/x-icon" sizes="32x32" />
+
     <title>About Us</title>
   </head>
   <body>
@@ -177,7 +179,7 @@
               </li>
             </ul>
           </li>
-          <img src="../../Photos/Logo.png" class="sc-logo" alt="websitelogo" />
+          <a href="../../index.html"><img src="../../Photos/Logo.png" class="sc-logo" alt="websitelogo" /></a>
           <li class="navbar__item">
             <a href="gallery.html" class="navbar__links"
               >Gallery</a
@@ -322,6 +324,8 @@
  
 
   <!-- Other top-level -->
+  <li class="menu-item"><a href="../../index.html" class="btn">Home</a></li>
+
   <li class="menu-item"><a href="gallery.html" class="btn">Gallery</a></li>
   <li class="menu-item"><a href="aboutus.html" class="btn">About Us</a></li>
 </ul>
@@ -613,13 +617,14 @@
     <footer class="footer">
       <div class="footer-content">
         <p class="footer-top">
-          © 2025 SUPREME W2 CARPETS LIMITED. All Rights Reserved.
-          <a href="/privacy-policy">Privacy Policy</a>
+          © 2025 Supreme W2 Carpets. All Rights Reserved.
+          <a href="../../privacy.html">Privacy Policy</a>
         </p>
 
         <p class="footer-info">
-          Registered Office: 27 Grasmere Avenue, London, W3 6JT<br />
-          Registered in England and Wales | Company No: 09374347
+          Registered Office: Suite G04, 1 Quality Court, Chancery Lane, London,
+          WC2A 1HR<br />
+          Registered in England and Wales | Company No: 15347370
         </p>
 
         <p class="footer-link">
