--- a/Carpets/nav/twist5050.html
+++ b/Carpets/nav/twist5050.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="carpet.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="../../logofavi.ico" type="image/x-icon" sizes="32x32" />
+
 
     <title>Cormar 50/50</title>
   </head>
@@ -180,7 +182,7 @@
               </li>
             </ul>
           </li>
-          <img src="../../Photos/Logo.png" class="sc-logo" alt="websitelogo" />
+          <a href="../../index.html"><img src="../../Photos/Logo.png" class="sc-logo" alt="websitelogo" /></a>
           <li class="navbar__item">
             <a href="gallery.html" class="navbar__links"
               >Gallery</a
@@ -325,6 +327,8 @@
  
 
   <!-- Other top-level -->
+  <li class="menu-item"><a href="../../index.html" class="btn">Home</a></li>
+
   <li class="menu-item"><a href="gallery.html" class="btn">Gallery</a></li>
   <li class="menu-item"><a href="aboutus.html" class="btn">About Us</a></li>
 </ul>
@@ -404,8 +408,8 @@
     <footer class="footer">
       <div class="footer-content">
         <p class="footer-top">
-          © 2025 Plumbers Pro Limited. All Rights Reserved.
-          <a href="/privacy-policy">Privacy Policy</a>
+          © 2025 Supreme W2 Carpets. All Rights Reserved.
+          <a href="../../privacy.html">Privacy Policy</a>
         </p>
 
         <p class="footer-info">
@@ -416,7 +420,7 @@
 
         <p class="footer-link">
           <a
-            href="https://find-and-update.company-information.service.gov.uk/company/15347370"
+            href="https://find-and-update.company-information.service.gov.uk/company/09374347"
             target="_blank"
             rel="noopener noreferrer">
             View on Companies House
